Intel Mac Metal: UV Display Stretch Angle Fault Colors #107025
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#107025
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system:Mac OS 13.3.1
Graphics card:Radeon Pro Vega 48 8GB
Blender Version
Broken: 3.5.0 - 3.5.1 - 3.6.0 alpha
Worked: NA
Short description of error
Using Intel Apple, with GPU Backend Metal enabled
UV Editing, when you turn on Display Stretch: Angle
Correct angles will show faulty colors.
When I switched to OpenGL and restart.
The Stretching shows properly as it should.
I tested using default blender with no addons. Clean install with Default Cube and the error persisted on the versions noted above.
Exact steps for others to reproduce the error
Intel Mac - Metal - UV Display Stretch Angle Fault Colors - 3.5.0 to 3.6.0 Alphato Intel Mac Metal: UV Display Stretch Angle Fault Colorscc @Michael-Parkin-White-Apple
Thanks for the report, will take a look.
Updating, the issue still persists in 3.6.0 LTS
Same exact symptoms, please guys this is an essential feature for us who unwrap geometry. The whole uv workflow requires to review the stretching for errors. It's been 3 months now and no progress on this. It's urgently needed.
Will there be any update for the upcoming 4.0 release?
That bug has been quite annoying in Blender and for quite some time I didn't know that it was a real bug (also more than 7 months old) and searching the internet didn't show this bug report here earlier.
Would love to know if there is any upcoming fix on this matter except downgrading to an older version?
Actually there is MORE BAD NEWS!
Blender 4.0.0 does not support OpenGL on Mac and the BUG is still there.
This means we are stuck with the 3.6.5 if we need this feature to be functional!!!!!
THE BUG IS STILL THERE AND NO SOLUTION WAS DONE FOR IT FOR OVER 7 MONTHS!!
THIS IS AN ESSENTIAL FEATURE. STRETCH DETECTION IS A MUST FOR ANY UV UNWRAPPING.
7 MONTHS IS MORE THAN ENOUGH TO FIX THIS ISSUE.
Deprecating OpenGL for Macs has Handicapped Blender for UV unwrapping Period!
I will be passing this to higher management. I'm sorry but you guys are doing a horrible job assessing priorities.